slight misalignment in credits fixed

--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,7 @@ button {
 
 #credits {
     display:block;
-    width:230px;
+    width:238px;
     text-align: center;
 }
 
